<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearEvento">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/nombre_evento"
                android:textColor="@color/colar1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edt_nombre_evento_crear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/mi_primer_evento"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView19" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/evento_descripcion"
                android:textColor="@color/colar1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_nombre_evento_crear" />

            <EditText
                android:id="@+id/edt_descripcion_evento_crear"
                android:layout_width="380dp"
                android:layout_height="171dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/descripcion_evento"
                android:inputType="textMultiLine"
                android:maxLength="1000"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView22" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/lugar_evento"
                android:textColor="@color/colar1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_descripcion_evento_crear" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="16dp"
                android:text="@string/tipo_evento"
                android:textColor="@color/colar1"
                app:layout_constraintStart_toEndOf="@+id/textView25"
                app:layout_constraintTop_toBottomOf="@+id/edt_descripcion_evento_crear" />

            <Spinner
                android:id="@+id/spEstados"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView25" />

            <Spinner
                android:id="@+id/spTipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/textView26"
                app:layout_constraintTop_toBottomOf="@+id/textView26" />

            <TextView
                android:id="@+id/edtContadorEventoCrear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/counter"
                android:textColor="@color/colar1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_descripcion_evento_crear" />

            <Button
                android:id="@+id/btn_seleccionar_imagen"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="32dp"
                android:backgroundTint="@color/colar1"
                android:text="@string/selecciona_imagen"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hsvCrearEvento" />

            <HorizontalScrollView
                android:id="@+id/hsvCrearEvento"
                android:layout_width="0dp"

                android:layout_height="150dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:foregroundGravity="center_vertical|center|center_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSeleccionarHoraCrear">

                <LinearLayout
                    android:id="@+id/lilaImagenes"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" />
            </HorizontalScrollView>

            <Button
                android:id="@+id/btnSeleccionarFechaCrear"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colar1"
                android:text="@string/fecha_crear"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spEstados"
                app:rippleColor="@color/colar1" />

            <TextView
                android:id="@+id/tvMostrarFechaSeleccionada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/fecha_seleccion"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintBottom_toBottomOf="@+id/btnSeleccionarFechaCrear"
                app:layout_constraintStart_toEndOf="@+id/btnSeleccionarFechaCrear"
                app:layout_constraintTop_toTopOf="@+id/btnSeleccionarFechaCrear" />

            <Button
                android:id="@+id/btnSeleccionarHoraCrear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colar1"
                android:text="@string/hora_crear"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSeleccionarFechaCrear"
                app:rippleColor="@color/colar1" />

            <TextView
                android:id="@+id/tvMostrarHoraSeleccionada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/hora_seleccion"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintBottom_toBottomOf="@+id/btnSeleccionarHoraCrear"
                app:layout_constraintStart_toEndOf="@+id/btnSeleccionarHoraCrear"
                app:layout_constraintTop_toTopOf="@+id/btnSeleccionarHoraCrear" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>